Fixed lights alignment in leaflet popup.

--- a/app/themes/tekyla/stylesheets/leaflet.scss
+++ b/app/themes/tekyla/stylesheets/leaflet.scss
@@ -455,6 +455,9 @@
     background: white;
     border: none;
     .leaflet-popup-content {
+      .popup-header .lights {
+        float: right;
+      }
       .popup-content, .popup-header, .popup-footer {
         padding: $default-gap 2*$default-gap;
       }
